alignment issue of brand

--- a/hmecloud/client/src/components/Report/SummaryReport.css
+++ b/hmecloud/client/src/components/Report/SummaryReport.css
@@ -725,15 +725,40 @@ span.redFont {
     margin-left: 7px;
 }
 
-span.StoreTitile.level-0 {
-    display: inline-block;
-    width: 400px !important;
-    white-space: nowrap;
-    overflow: hidden;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis;
-    /* padding-left: 5px; newly added */
+
+span.StoreTitile {
+  display: inline-block;
+  width: 400px;
+  white-space: nowrap;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  /* padding-left: 5px; newly added */
 }
+
+span.StoreTitile.level-0 {
+  width: 400px;
+}
+span.StoreTitile.level-1 {
+  width: 269px;
+}
+
+span.StoreTitile.level-2 {
+  width: 177px;
+}
+
+span.StoreTitile.level-3 {
+  width: 109px;
+}
+
+span.StoreTitile.level-4 {
+  width: 59px;
+}
+
+span.StoreTitile.level-5 {
+  width: 400px;
+}
+
 
 
 span.StoreBrand {
